# voiptester

./: .gitignore  pyproject.toml
app/: main.py  state_machine.py
app/core/: config.py  log.py  storage.py
app/io/: leds_button.py  oled.py
app/testsuite/: net_link.py
