[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voiptester"
version = "0.0.1"
description = "Trunex VoIP / PoE tester"
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
voiptester = "app.main:main"

[tool.black]
line-length = 88
target-version = ["py311"]
skip-string-normalization = false

[tool.isort]
profile = "black"

[tool.flake8]
exclude = ["venv", "__pycache__"]
max-line-length = 88
ignore = ["E203", "W503"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]